--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "sails-memory": "^0.10.4"
   },
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test/unit"
   },
   "repository": {
     "type": "git",
