--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "crypto": "^0.0.3",
     "debug-logger": "^0.4.1",
+    "it-optional": "0.0.2",
     "lodash": "^3.9.3",
     "waterline": "^0.10.22"
   },
