--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "dependencies": {
     "crypto": "^0.0.3",
     "debug-logger": "^0.4.1",
-    "it-optional": "0.0.2",
     "lodash": "^3.9.3",
     "waterline": "^0.10.22"
   },
   "devDependencies": {
     "async": "^1.0.0",
     "express-session": "^1.11.2",
+    "it-optional": "^0.0.3",
     "mocha": "*",
     "sails-disk": "^0.10.8",
     "sails-memory": "^0.10.4",
